--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -42,6 +42,9 @@ vyos_dns_forwarding__listen_addresses:
   # MAN
   - 10.10.0.1
   - "10.10.0.{{ vyos__host_id_ipv4 }}"
+  # SERVICES
+  - 10.11.0.1
+  - "10.11.0.{{ vyos__host_id_ipv4 }}"
   # IOT
   - 10.66.0.1
   - "10.66.0.{{ vyos__host_id_ipv4 }}"
@@ -115,6 +118,10 @@ vyos_firewall__zones:
     description: "management vlan ({{ ansible_managed }})"
     interfaces:
       - "{{ vyos__lan_interface }}.10"
+  - name: SERVICES
+    description: Services from Kubernetes
+    interfaces:
+      - "{{ vyos__lan_interface }}.11"
   - name: "IOT"
     description: "IoT network ({{ ansible_managed }})"
     interfaces:
@@ -299,6 +306,10 @@ vyos_interfaces__ethernet:
         description: "MAN - management vlan ({{ ansible_managed }})"
         ipv4:
           - address: "10.10.0.{{ vyos__host_id_ipv4 }}/24"
+      - vlan_id: 11
+        description: Services from Kubernetes
+        ipv4:
+          - address: "10.11.0.{{ vyos__host_id_ipv4 }}/23"
       - vlan_id: 66
         description: "IOT - internet of things: WAN access, but not much else ({{ ansible_managed }})"
         ipv4:
@@ -377,6 +388,14 @@ vyos_vrrp__groups:
     sync_group: MAIN
     virtual_address: 10.10.0.1/24
     vrid: 10
+  - hello_source_address: "10.11.0.{{ vyos__host_id_ipv4 }}"
+    interface: "{{ vyos__lan_interface }}.11"
+    name: SERVICES-v4
+    peer_address: "10.11.0.{{ vyos__peer_host_id_ipv4 }}"
+    priority: "{{ vyos__vrrp_priority }}"
+    sync_group: MAIN
+    virtual_address: 10.11.0.1/23
+    vrid: 11
   - hello_source_address: "10.66.0.{{ vyos__host_id_ipv4 }}"
     interface: "{{ vyos__lan_interface }}.66"
     name: IOT-v4
