--- a/firewall_zones/vyos_home/services/from-home-ipv4.yml
+++ b/firewall_zones/vyos_home/services/from-home-ipv4.yml
@@ -4,3 +4,8 @@
   protocol: icmp
   icmp:
     type_name: any
+- description: Allow SERVICE-TALKERS access
+  action: accept
+  source:
+    group:
+      address_group: SERVICE-TALKERS-v4
