--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -228,7 +228,7 @@ vyos_firewall_global__group:
         - address: "10.150.0.{{ vyos__peer_host_id_ipv4 }}"
         - address: "172.16.5.{{ vyos__peer_host_id_ipv4 }}"
     - name: SERVICE-TALKERS-v4
-      description: IP Addresses allowed to talk to services
+      description: IP Addresses allowed to talk to all services
       members:
         # sdwilsh-dev.hogs.tswn.us (sdwilsh-dev)
         - address: 10.10.0.20
