add a traefik for services exposed to the management network

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -221,6 +221,8 @@ bind_zones:
         ip: 10.10.0.151
       - name: test-traefik.hogs
         ip: 10.10.0.151
+      - name: test-traefik-man.hogs
+        ip: 10.11.1.26
 
       # Services Networks
       - name: "installation02"
