always run the task to mount filesystem as rw

--- a/plays/groups/pikvm.yml
+++ b/plays/groups/pikvm.yml
@@ -1,6 +1,8 @@
 - name: Mount the filesystem as rw
   hosts: pikvm
   gather_facts: no
+  tags:
+    - always
   tasks:
     - name: Mount the filesystem as rw
       ansible.builtin.raw: rw
