add tags for disabling atx

--- a/plays/groups/pikvm.yml
+++ b/plays/groups/pikvm.yml
@@ -50,6 +50,8 @@
           kvmd:
             atx:
               type: disabled
+      tags:
+        - atx
   post_tasks:
     - name: Mount the filesystem as ro
       ansible.builtin.raw: ro
