--- a/plays/groups/pikvm.yml
+++ b/plays/groups/pikvm.yml
@@ -52,6 +52,20 @@
               type: disabled
       tags:
         - atx
+    - name: Set hostname
+      ansible.builtin.hostname:
+        name: "{{ inventory_hostname_short }}"
+      tags:
+        - hostname
+    - name: Set UI Hostname
+      ansible.builtin.lineinfile:
+        backrefs: yes
+        line: "\\1{{ inventory_hostname }}"
+        path: /etc/kvmd/meta.yaml
+        regexp: r"^(\s+host:\s+).*"gm
+        state: present
+      tags:
+        - hostname
   post_tasks:
     - name: Mount the filesystem as ro
       ansible.builtin.raw: ro
