setup pikvm kvm switch

--- a/host_vars/kvm01.hogs.tswn.us.yml
+++ b/host_vars/kvm01.hogs.tswn.us.yml
@@ -1,3 +1,9 @@
 ---
 common__ip_addresses:
   - 10.10.0.50/24
+
+pikvm__hosts:
+  - ["#esxi-intel01", ch0_led, ch0_button]
+  - ["#esxi-intel02", ch1_led, ch1_button]
+  - ["#esxi-intel03", ch2_led, ch2_button]
+  # - ["#storage1", ch3_led, ch3_button]
