--- a/host_vars/node01.hogs.tswn.us.yml
+++ b/host_vars/node01.hogs.tswn.us.yml
@@ -1,10 +1,17 @@
 ---
-common__gateway_v4_address: 10.10.0.1
+common__interfaces:
+  bonds:
+    - bridge_name: trunk
+      mode: active-backup
+      name: bond0
+      slaves:
+        - mac: c8:7f:54:93:57:58
+          primary: yes
+        - mac: 6c:4b:90:62:87:98
+
 common__ip_addresses:
   - 10.10.0.101/24
-  - 10.11.0.41/23
-common__nameservers:
-  addresses:
-    - 10.10.0.1
+  - 10.11.0.101/23
+  - 10.117.0.101/23
 
 k3s_cluster_init: yes
