--- a/group_vars/vyos_wan.yml
+++ b/group_vars/vyos_wan.yml
@@ -30,7 +30,7 @@ vyos_firewall__zones:
     description: "CenturyLink WAN connection ({{ ansible_managed }})"
     interfaces:
       - pppoe0
-vyos_firewall__zones_path: "./firewall_zones/vyos_wan"
+vyos_firewall__zones_root_path: firewall_zones/vyos_wan
 
 vyos_firewall_global__group:
   address_group:
