--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -215,8 +215,8 @@ bind_zones:
         ip: 10.10.0.151
       - name: test-traefik.hogs
         ip: 10.10.0.151
-      - name: test-traefik-man.hogs
-        ip: 10.11.1.26
+      - name: traefik-man.hogs
+        ip: 10.11.1.0
 
       # Services Networks
       - name: "installation02"
