--- a/kustomization/base/argo-proj/kustomization.yml
+++ b/kustomization/base/argo-proj/kustomization.yml
@@ -4,20 +4,20 @@ kind: Kustomization
 
 resources:
   - project.yml
-  - application/ara.yml
+  # - application/ara.yml
   - application/argo-cd.yml
   - application/argo-proj.yml
   - application/calico.yml
   - application/cert-manager.yml
   - application/kube-vip.yml
-  - application/longhorn.yml
-  - application/mariadb-galera.yml
-  - application/minio.yml
-  - application/opensearch-operator.yml
-  - application/prometheus.yml
-  - application/prometheus-operator.yml
+  # - application/longhorn.yml
+  # - application/mariadb-galera.yml
+  # - application/minio.yml
+  # - application/opensearch-operator.yml
+  # - application/prometheus.yml
+  # - application/prometheus-operator.yml
   - application/purelb.yml
   - application/tigera-operator.yml
-  - application/traefik.yml
+  # - application/traefik.yml
   - application/vector-agent.yml
   - application/vector-aggregator.yml
