add a namespace to the configmap generated for cert-manager

--- a/kustomization/base/cert-manager/kustomization.yml
+++ b/kustomization/base/cert-manager/kustomization.yml
@@ -4,6 +4,7 @@ kind: Kustomization
 
 configMapGenerator:
   - name: vector-config
+    namespace: cert-manager
     files:
       - configmap/vector.yml
 images:
