--- a/kustomization/base/traefik-man/patches/set_load_balancer.yml
+++ b/kustomization/base/traefik-man/patches/set_load_balancer.yml
@@ -3,5 +3,5 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    purelb.io/service-group: man-servicegroup
+    purelb.io/service-group: default # MAN
   name: this-is-ignored-but-is-required
