--- a/kustomization/components/traefik/deployment.yml
+++ b/kustomization/components/traefik/deployment.yml
@@ -25,6 +25,8 @@ spec:
             - --api.insecure=true
             - --entrypoints.metrics.address=:9090
             - --entrypoints.web.address=:80
+            - --entrypoints.web.http.redirections.entrypoint.scheme=https
+            - --entrypoints.web.http.redirections.entrypoint.to=websecure
             - --entrypoints.websecure.address=:443
             - --global.checknewversion=false
             - --metrics.prometheus=true
