--- a/kustomization/overlays/prod/argo-cd/kustomization.yml
+++ b/kustomization/overlays/prod/argo-cd/kustomization.yml
@@ -7,6 +7,6 @@ patches:
   - path: patches/change_ingress_host.yml
     target:
       kind: Ingress
-      name: argocd-.*ingress
+      name: argo-cd-ingress
 resources:
   - ../../../base/argo-cd
