--- a/kustomization/base/argo-cd/ingress.yml
+++ b/kustomization/base/argo-cd/ingress.yml
@@ -15,6 +15,6 @@ spec:
               service:
                 name: argocd-server
                 port:
-                  number: 443
+                  name: http
             path: /
             pathType: Prefix
