--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -205,6 +205,8 @@ bind_zones:
       # At some point, this should ask the k3s control plane what the IP address is
       - name: argo-cd.hogs
         ip: 10.11.1.0
+      - name: longhorn.hogs
+        ip: 10.11.1.0
       - name: traefik-man.hogs
         ip: 10.11.1.0
 
