--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -18,6 +18,10 @@ patches:
     target:
       kind: Application
       name: kube-vip
+  - path: patches/set_longhorn_path.yml
+    target:
+      kind: Application
+      name: longhorn
   - path: patches/set_purelb_path.yml
     target:
       kind: Application
