move prometheus to prod

--- a/kustomization/base/prometheus/kustomization.yml
+++ b/kustomization/base/prometheus/kustomization.yml
@@ -4,7 +4,7 @@ kind: Kustomization
 
 namespace: prometheus
 resources:
-  - ingressroute.yml
+  - ingress.yml
   - namespace.yml
   - prometheus.yml
   - rbac.yml
