--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -207,6 +207,8 @@ bind_zones:
         ip: 10.11.1.0
       - name: longhorn.hogs
         ip: 10.11.1.0
+      - name: prometheus.hogs
+        ip: 10.11.1.0
       - name: traefik-man.hogs
         ip: 10.11.1.0
 
