--- a/kustomization/base/argo-proj/kustomization.yml
+++ b/kustomization/base/argo-proj/kustomization.yml
@@ -10,7 +10,7 @@ resources:
   - application/calico.yml
   - application/cert-manager.yml
   - application/kube-vip.yml
-  # - application/longhorn.yml
+  - application/longhorn.yml
   # - application/mariadb-galera.yml
   # - application/opensearch-operator.yml
   # - application/prometheus.yml
