actually use a unique name for cpu rules

--- a/kustomization/base/prometheus/rules/cpu_load.yml
+++ b/kustomization/base/prometheus/rules/cpu_load.yml
@@ -2,7 +2,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: disk-rules
+  name: cpu-rules
   namespace: prometheus
 spec:
   groups:
