--- a/kustomization/overlays/prod/traefik-man/kustomization.yml
+++ b/kustomization/overlays/prod/traefik-man/kustomization.yml
@@ -8,6 +8,10 @@ patches:
     target:
       kind: Ingress
       name: traefik-dashboard-.*ingress
+  - path: patches/set_ingress_published_service.yml
+    target:
+      kind: Deployment
+      name: traefik-deployment
   # Uncomment to debug production issues!
   # - path: patches/set_debug_log_level.yml
   #   target:
