manage traefik-man with argo-cd

--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -30,3 +30,4 @@ resources:
   - ../../../base/argo-proj
   - application/prometheus-operator.yml
   - application/prometheus.yml
+  - application/traefik-man.yml
