--- a/kustomization/overlays/prod/argo-proj/application/traefik-man.yml
+++ b/kustomization/overlays/prod/argo-proj/application/traefik-man.yml
@@ -2,16 +2,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: traefik-man
   namespace: argocd
 spec:
   project: default
   source:
-    path: kustomization/overlays/prod/prometheus
+    path: kustomization/overlays/prod/traefik-man
     repoURL: https://github.com/sdwilsh/ansible-playbooks
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: prometheus
+    namespace: traefik-man
   syncPolicy:
     automated: {}
