--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -201,6 +201,8 @@ bind_zones:
         ip: 10.10.0.100
       - name: node01.hogs
         ip: 10.10.0.101
+      - name: worker01.hogs
+        ip: 10.10.0.104
 
       # At some point, this should ask the k3s control plane what the IP address is
       - name: argo-cd.hogs
