--- a/kustomization/overlays/prod/ara/patches/add_address_in_job_env.yml
+++ b/kustomization/overlays/prod/ara/patches/add_address_in_job_env.yml
@@ -3,4 +3,4 @@
   path: /spec/jobTemplate/spec/template/spec/containers/0/env/-
   value:
     name: ARA_API_SERVER
-    value: https://test-ara.hogs.tswn.us
+    value: https://ara.hogs.tswn.us
