manage ara with argo

--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -28,6 +28,7 @@ patches:
       name: purelb
 resources:
   - ../../../base/argo-proj
+  - application/ara.yml
   - application/prometheus-operator.yml
   - application/prometheus.yml
   - application/traefik-man.yml
