patch ingress correctly for ara

--- a/kustomization/overlays/prod/ara/kustomization.yml
+++ b/kustomization/overlays/prod/ara/kustomization.yml
@@ -14,7 +14,7 @@ patches:
       name: prune-old-logs
   - path: patches/change_ingress_host.yml
     target:
-      kind: IngressRoute
+      kind: Ingress
       name: ara-ingress
 resources:
   - ../../../components/ara
