--- a/kustomization/base/argo-proj/kustomization.yml
+++ b/kustomization/base/argo-proj/kustomization.yml
@@ -11,6 +11,7 @@ resources:
   - application/kube-vip.yml
   - application/longhorn.yml
   # - application/mariadb-galera.yml
+  - application/operator-lifecycle-manager.yml
   # - application/opensearch-operator.yml
   - application/purelb.yml
   - application/tigera-operator.yml
