fix some namespace issues that were confusing argocd

--- a/kustomization/overlays/prod/argo-proj/application/olm-operators.yml
+++ b/kustomization/overlays/prod/argo-proj/application/olm-operators.yml
@@ -12,5 +12,6 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
+    namespace: operators
   syncPolicy:
     automated: {}
