--- a/kustomization/base/argo-proj/application/operator-lifecycle-manager.yml
+++ b/kustomization/base/argo-proj/application/operator-lifecycle-manager.yml
@@ -12,6 +12,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
+    namespace: olm
   syncPolicy:
     automated: {}
     syncOptions:
