--- a/kustomization/overlays/prod/olm-operators/subscriptions.yml
+++ b/kustomization/overlays/prod/olm-operators/subscriptions.yml
@@ -13,6 +13,17 @@ spec:
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
+  name: my-mariadb-operator
+  namespace: operators
+spec:
+  channel: alpha
+  name: mariadb-operator
+  source: operatorhubio-catalog
+  sourceNamespace: olm
+---
+apiVersion: operators.coreos.com/v1alpha1
+kind: Subscription
+metadata:
   name: my-prometheus
   namespace: operators
 spec:
